Fixed content overflow bug.

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,8 @@ html, body, #react-root {
 	font-family: "PT Sans", sans-serif;
 	font-size: 16px;
 	
+	overflow: hidden;
+	
 }
 
 #react-root {
