--- a/src/react/elements/page.scss
+++ b/src/react/elements/page.scss
@@ -4,6 +4,7 @@
 	
 	height: 100%;
 	padding: 0 20px;
+	overflow: scroll;
 	
 	&.centered {
 		
